add basic register, index router

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "noEmitOnError": false,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true
-  }
+  },
+  "include": ["src/**/*/"]
 }
