--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "main": "src/app.ts",
   "type": "module",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "esbuild": "^0.21.5",
