--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
@@ -19,6 +20,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "get-tsconfig": "^4.7.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "resolve-pkg-maps": "^1.0.0"
   },
