--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
+    "@types/bcrypt": "^5.0.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   },
@@ -12,8 +14,8 @@
   "main": "src/app.ts",
   "type": "module",
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "esbuild": "^0.21.5",
@@ -22,6 +24,8 @@
     "get-tsconfig": "^4.7.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "resolve-pkg-maps": "^1.0.0"
   },
   "scripts": {
