--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "dotenv": "^16.4.5",
     "esbuild": "^0.21.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.1",
     "express-validator": "^7.1.0",
     "get-tsconfig": "^4.7.5",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
